# subsetzer-llamacpp

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml
.github/workflows/: release.yml
src/subsetzer/: __init__.py  __main__.py  chunking.py  cli.py  engine.py  io.py  langs.py  logging_utils.py  version.py
src/subsetzer/formats/: __init__.py  common.py  srt.py  tsv.py  vtt.py
tests/: test_cli.py  test_engine.py  test_io_and_formats.py  test_langs.py
