[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "subsetzer-llamacpp"
version = "0.2.0"
description = "Translate SRT/VTT/TSV via a local llama.cpp server. CLI-first; stdlib-only core."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [{ name = "Martin Fellner", email = "martin@martinfellner.at" }]
keywords = ["subtitles", "translation", "vtt", "srt", "llamacpp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
subsetzer-llamacpp = "subsetzer.cli:main"

[project.urls]
Homepage = "https://github.com/githabideri/subsetzer"
Issues = "https://github.com/githabideri/subsetzer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/subsetzer"]
include = ["src/subsetzer/py.typed"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]
